syntax = "proto3";

package users.oauth;

service UsersOauthService {
    rpc getProfile(ProfileRequest) returns (Profile);
}

enum Scope {
    ReadEmail = 0;
    ReadName = 1;
}

message ProfileRequest {
    string userId = 1;
    repeated Scope scopes = 2;
}

message Profile {
    optional string email = 1;
    optional string firstName = 2;
    optional string lastName = 3;
}